--- a/mobile-333/app.json
+++ b/mobile-333/app.json
@@ -21,7 +21,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.anonymous.mobile333"
     },
     "web": {
       "favicon": "./assets/favicon.png"
