--- a/mobile-333/package.json
+++ b/mobile-333/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "@react-navigation/native-stack": "^6.9.17",
+    "axios": "^1.6.1",
     "expo": "~49.0.15",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
