Backend now supports jwt authentication

--- a/mobile-backend/composer.json
+++ b/mobile-backend/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "firebase/php-jwt": "^6.9"
+        "firebase/php-jwt": "^6.9",
+        "vlucas/phpdotenv": "^5.6"
     }
 }
