--- a/mobile-333/package.json
+++ b/mobile-333/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@types/jwt-decode": "^3.1.0",
     "axios": "^1.6.1",
     "expo": "~49.0.15",
     "expo-secure-store": "~12.3.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "jwt-decode": "^3.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
