--- a/mobile-333/package.json
+++ b/mobile-333/package.json
@@ -26,6 +26,7 @@
     "react-native-paper": "^5.11.1",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-vector-icons": "^10.0.2",
     "react-native-web": "~0.19.6",
     "react-router-dom": "^6.18.0",
     "yup": "^1.3.2"
